feat(claudecode): full UI/UX redesign with component architecture and mission expansion
- Decompose 1,551-line monolith page.tsx into 25+ modular components (53 lines)
- Consolidate 11 tabs into 5 universal tabs (Journey/Explore/Practice/Customize/Reference)
- Add Apple/Notion-style design system (indigo accent, backdrop-blur header, segmented control)
- Expand missions: beginner 5→7, intermediate 4→5, advanced 4→6
- Add .env.local security guide and API key leak prevention content
- Add Claude Code architecture understanding mission for intermediate users

--- a/opperation/multi-agent/config/projects.yaml
+++ b/opperation/multi-agent/config/projects.yaml
@@ -1,8 +1,8 @@
 projects:
-  - id: sample_project
-    name: "Sample Project"
-    path: "/mnt/c/Projects/Sample"
+  - id: ap_project
+    name: "AP Project"
+    path: "/Users/hantaku/Downloads/AP"
     priority: high
     status: active
 
-current_project: sample_project
+current_project: ap_project
